--- a/widget.css
+++ b/widget.css
@@ -1,10 +1,16 @@
 /* CSS for ChiliPeppr Widget */
 
-#com-chilipeppr-widget-template {
+#net-mydomain-widget-currentsensor {
    
 }
 
-#com-chilipeppr-widget-template .nav-tabs>li>a {
+#net-mydomain-widget-currentsensor .nav-tabs>li>a {
     padding: 2px 6px;
 }
 
+#net-mydomain-widget-currentsensor .currentsensor-graph {
+    height:200px;
+    border:2px dashed red;
+    border-radius:4px;
+    padding:10px;
+}
